# wormpose

./: .buildinfo  .travis.yml  LICENSE  README.md  custom_loader.html  documentation.html  genindex.html  index.html  install.html  objects.inv  pipeline.html  py-modindex.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tierpsy.html
_autosummary/: wormpose.commands.calibrate_dataset.html  wormpose.commands.evaluate_model.html  wormpose.commands.export_results.html  wormpose.commands.generate_training_data.html  wormpose.commands.postprocess_results.html  wormpose.commands.predict_dataset.html  wormpose.commands.train_model.html  wormpose.commands.utils.results_saver.html  wormpose.commands.utils.time_sampling.html  wormpose.commands.visualize_results.html  wormpose.config.default_paths.html  wormpose.config.experiment_config.html  wormpose.dataset.base_dataset.html  wormpose.dataset.features.html  wormpose.dataset.image_processing.frame_preprocessor.html  wormpose.dataset.image_processing.image_utils.html  wormpose.dataset.image_processing.options.html  wormpose.dataset.image_processing.simple_frame_preprocessing.html  wormpose.dataset.loader.html  wormpose.dataset.loaders.hdf5features.html  wormpose.dataset.loaders.images_folder.html  wormpose.dataset.loaders.resizer.html  wormpose.dataset.loaders.sample_data.html  wormpose.dataset.loaders.tierpsy.features_dataset.html  wormpose.dataset.loaders.tierpsy.frames_dataset.html  wormpose.dataset.loaders.tierpsy.results_exporter.html  wormpose.demo.real_simple_visualizer.html  (+23 more)
(+183 files in other folders)
