[metadata]
name = wormpose
author = "Laetitia M Hebert, Antonio C Costa"
author_email = laetitia.m.hebert@gmail.com
license = BSD 3-Clause License
url = https://iteal.github.io/wormpose/
project-urls =
    Documentation = https://iteal.github.io/wormpose/documentation.html
    Twitter = https://twitter.com/wormpose
    GitHub = https://github.com/iteal/wormpose
    Bug-Tracker = https://github.com/iteal/wormpose/issues
license_files = LICENSE
description = WormPose: Image synthesis and convolutional networks for pose estimation in C. elegans
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
    animal pose estimation
    c. elegans
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Image Recognition

[options]
python_requires = >=3.6
packages = find:
setup_requires =
    setuptools
install_requires =
    opencv-python
    tensorflow >= 2
    numpy
    h5py
    scipy


